@@ -9,6 +9,7 @@ Improvements:
  - Status view: improve "on branch" information inspired by the prompt
    code in git's bash completion script.
  - Colors for 256-capable terminals can be specified as colorN.
+ - Entering a number in the prompt will jump to that line number.
 
 tig-0.14
 --------
